Interfaz gráfica mejorada, algoritmo de las rutas optimizado, mejoras en la lógica y los archivos, falta mejorar detalles.